[package]
name = "hmac"
version = "0.9.0"
description = "Generic implementation of Hash-based Message Authentication Code (HMAC)"
authors = ["RustCrypto Developers"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hmac"
repository = "https://github.com/RustCrypto/MACs"
keywords = ["crypto", "mac", "hmac", "digest"]
categories = ["cryptography", "no-std"]
readme = "README.md"
edition = "2018"

[dependencies]
crypto-mac = { version = "0.9.1", path = "../crypto-mac" }
digest = { version = "0.9", path = "../digest" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }
#[dev-dependencies]
#crypto-mac = { version = "0.9", branch = "ec0.6.5-sgx", git = "https://github.com/sgx-test/traits-sgx", features = ["dev"] }
#md-5 = { version = "0.9", default-features = false }
#sha2 = { version = "0.9", default-features = false }

[features]
std = ["crypto-mac/std"]
default = ["mesalock_sgx","std"]
mesalock_sgx = ["sgx_tstd"]